# torchwatcher

./: .gitignore  AUTHORS  LICENSE  README.md  notes.md  objectives.md  pyproject.toml  scratch.py
examples/: Gradient_accumulation.py  explore_rank_evolution.ipynb  rank_evolution.py  record_input_gradients.py  track_featuremaps.py  track_gradients.ipynb  tunnel-effect.py  visualisation.py
examples/__marimo__/session/: Gradient_accumulation.py.json  rank_evolution.py.json
src/torchwatcher/: drawing.py  utils.py
src/torchwatcher/analysis/: __init__.py  analysis.py  basic_statistics.py  dead_relus.py  gradients.py  linear_probe.py  rank.py  running_stats.py
src/torchwatcher/interjection/: __init__.py  interjection.py  rewriting.py  tracing.py
src/torchwatcher/interjection/node_selector/: __init__.py  node_selector.py  node_types.py
src/torchwatcher/nn/: __init__.py  identity.py
src/torchwatcher/training/: __init__.py  callbacks.py
tests/torchwatcher/analysis/: linear_probe_tests.py  test_linear_probe.py
tests/torchwatcher/interjection/: test_node_selector.py
tests/torchwatcher/training/: test_training_callbacks.py
tools/: scratch.py
torchwatcher/: interjection.py  node_selector.py  node_types.py  tracing.py  utils.py
torchwatcher/analysis/: analysis.py  basic_statistics.py  dead_relus.py  linear_probe.py  running_stats.py
torchwatcher/interjection/: __init__.py  interjection.py  node_selector.py  node_types.py  tracing.py
torchwatcher/interjection/node_selector/: __init__.py  node_selector.py
